# dynamic-ip-handler

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  data.csv  docker-compose.yaml  dynamic-ip-handler-aarch64  dynamic-ip-handler-armv7  dynamic-ip-handler-x86_64
scripts/: build.sh  cron.sh
src/: main.rs
