[package]
name = "dynamic-ip-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.46.0", features = ["lazy", "csv"] }
public-ip = {version = "0.2.2", features = ["tokio"]}
tokio = { version = "1.43.0", features = ["rt", "macros"] }
chrono = {version = "0.4.39", features = ["default"]}
mail-send = {version = "0.5.0", features = ["default"]}
dotenv = "0.15.0"
