[package]
name = "dynamic-ip-handler"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true  # Strip debug symbols.
opt-level = "z"  # Optimize for size.
lto = true  # Enable link-time optimization.
codegen-units = 1  # Use a single codegen unit.
panic = "abort"  # Abort on panic.

[dependencies]
public-ip = {version = "0.2.2", features = ["tokio"]}
tokio = { version = "1.43.0", features = ["rt", "macros"] }
chrono = {version = "0.4.39", features = ["default"]}
mail-send = {version = "0.5.0", features = ["default"]}
dotenv = "0.15.0"
arrow = "54.2.1"
arrow-csv = "54.2.1"
